--- a/sass/instagram/_instagram.scss
+++ b/sass/instagram/_instagram.scss
@@ -1,110 +1,35 @@
 // instagram feed
-.section-instgram {
+.section-gallery {
   background: $blue;
   overflow: hidden;
-
-  &:before,
-  &:after {
-    content: "";
-    // background-image: url('../puppysplaypen/assets/images/logo-puppys-playpen-paw.svg');
-    background-repeat: no-repeat;
-    background-size: 100% auto;
-    height: rem(128);
-    width: rem(128);
-    opacity: .32;
-    position: absolute;
-    z-index: -1;
-  }
-
-  &:before {
-    top: 4vh;
-    left: 2vw;
-    transform: rotate(15deg);
-  }
-
-  &:after {
-    bottom: 4vh;
-    right: 2vw;
-    transform: rotate(-15deg);
-  }
 
   .wrapper {
     @extend %wrapper;
     max-width: $wrapper-site;
   }
 
+  ~ .section-cta {
+    margin-top: 12vh;
+  }
+
 }
 
-.instagram-container {
-  display: grid;
-  list-style: none;
+.gallery {
+  columns: 3;
+  gap: $space-16;
+  margin: 0 $space-16;
+  line-height: 0;
 
   // media
-  @include media($mq-tablet-up) {
-    grid-gap: $space-16;
-    grid-template-columns: repeat(6, 1fr);
-    grid-template-areas:
-      "pod2 pod2 pod3 pod4 pod5 pod5"
-      "pod2 pod2 pod6 pod6 pod5 pod5"
-      "pod7 pod8 pod6 pod6 pod9 pod10"
-      "pod11 pod11 pod12 pod12 pod13 pod13"
-      "pod11 pod11 pod12 pod12 pod13 pod13"
-      ". . pod1 pod1 . .";
-
-  }
   @include media($mq-mobile) {
-    grid-gap: $space-8;
-    grid-template-columns: repeat(2, 1fr);
+    columns: 2;
   }
 
-  [data-social-share] {
-    border: 0;
-    display: inherit;
-    padding-bottom: 0;
-
-    // media
-    @include media($mq-mobile) {
-      grid-column: span 2;
-    }
-
+  img {
+    background: $white;
+    border: solid $space-8 $white;
+    box-shadow: $box-2;
+    margin-top: $space-16;
   }
 
-}
-
-.instagram-item {
-  background: $white;
-  border: solid $space-8 $white;
-  box-shadow: $box-2;
-  grid-column: span 1;
-  padding-bottom: 100%;
-  overflow: hidden;
-  position: relative;
-
-  // media
-  @include media($mq-tablet-up) {
-    &:nth-child(1) { grid-area: pod1; }
-    &:nth-child(2) { grid-area: pod2; }
-    &:nth-child(3) { grid-area: pod3; }
-    &:nth-child(4) { grid-area: pod4; }
-    &:nth-child(5) { grid-area: pod5; }
-    &:nth-child(6) { grid-area: pod6; }
-    &:nth-child(7) { grid-area: pod7; }
-    &:nth-child(8) { grid-area: pod8; }
-    &:nth-child(9) { grid-area: pod9; }
-    &:nth-child(10) { grid-area: pod10; }
-    &:nth-child(11) { grid-area: pod11; }
-    &:nth-child(12) { grid-area: pod12; }
-    &:nth-child(13) { grid-area: pod13; }
-  }
-
-}
-
-.instagram-asset {
-  height: 100%;
-  width: 100%;
-  object-fit: cover;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
 }
